--- a/mainRO/style.css
+++ b/mainRO/style.css
@@ -272,7 +272,7 @@ transform: translateZ(20px);
 
                             /*BottomMenu*/
 .footer{
-    width: 199vh;
+    width: 100%;
     height: 25vh;
     background-color: #031329;
     display: block;
